# emp-zk

./: .gitignore  CMakeLists.txt  Plan.md  README.md
.github/workflows/: build.yml
bench/: CMakeLists.txt
bench/arith/: circuit_scalability.cpp  input_scalability.cpp
bench/bool/: circuit_scalability.cpp  f2k_scalability.cpp  input_scalability.cpp  memory_scalability.cpp
cmake/: emp-zk-config.cmake.in
emp-zk/: emp-zk.h
emp-zk/edabit/: auth_helper.h  edabits.h
emp-zk/emp-svole/: base_cot.h  emp-svole.h  f2k_lpn.h  f2k_mpfss.h  f2k_policy.h  f2k_spfss.h  f2k_vole.h  field_policy.h  fp_base_svole.h  fp_cope.h  fp_lpn.h  fp_mpfss_reg.h  fp_policy.h  fp_spfss_recver.h  fp_spfss_sender.h  fp_utility.h  fp_vole.h  lpn_amp.h  mpfss_reg.h  preot.h  spfss_recver.h  spfss_sender.h  svole.h
emp-zk/emp-vole/: base_cot.h  base_svole.h  cope.h  emp-vole.h  lpn.h  mpfss_reg.h  preot.h  spfss_recver.h  spfss_sender.h  twokeyprp.h  utility.h  vole.h  vole_triple.h
emp-zk/emp-vole-f2k/: base_svole.h  lpn_f2k.h  mpfss.h  spfss_f2k_recver.h  spfss_f2k_sender.h  svole.h
emp-zk/emp-zk-arith/: conversion.h  correlation_pipe.h  emp-zk-arith.cpp  emp-zk-arith.h  int_fp.h  int_fp_vec.h  ostriple.h  polynomial.h  triple_auth.h  zk_fp_exec.h  zk_fp_exec_prover.h  zk_fp_exec_verifier.h
emp-zk/emp-zk-arith/edabit/: doub_auth_helper.h  edabits.h
emp-zk/emp-zk-bool/: bool_io.h  emp-zk-bool.h  gf_base.h  ostriple.h  polynomial.h  triple_auth.h  zk_bool_backend.h  zk_bool_backend_prv.h  zk_bool_backend_ver.h  zk_bool_base.h  zk_bool_circuit_exec.h  zk_bool_prover.h  zk_bool_verifier.h  zk_context.h  zk_perm_proof.h  zk_prover.h  zk_ram.h  zk_session.h  zk_set.h  zk_types.h  zk_verifier.h  zk_wire.h
emp-zk/emp-zk-bool/ram-zk/: emp-ram-zk.h  ostriple.h  poly_prdt.h  ro-zk-mem.h  zk-mem-ext.h  zk-mem.h  zk_ram.h  zk_ram_ext.h  zk_ram_pack.h  zk_ram_ro.h  zk_set.h
emp-zk/extensions/: floats.h  lowmc.h
emp-zk/extensions/ram-zk/: gf_base.h  ostriple.h  poly_prdt.h  ro-zk-mem.h  zk-mem-ext.h  zk-mem.h
test/: CMakeLists.txt  test_io_helpers.h
test/arith/: abconversion.cpp  bg_ostriple.cpp  bg_stress.cpp  circuit_scalability.cpp  feed_bench.cpp  inner_prdt.cpp  input_scalability.cpp  int_fp_vec.cpp  matrix_mul.cpp  mixed_check.cpp  ostriple.cpp  polynomial.cpp  sis.cpp  zk_proof.cpp
test/bool/: bg_engine.cpp  bool_io.cpp  circuit_scalability.cpp  example.cpp  f2k_scalability.cpp  inner_prdt.cpp  input_scalability.cpp  lowmc.cpp  memory_scalability.cpp  ostriple.cpp  perm_proof.cpp  polynomial.cpp  sha256.cpp  test_context_zk.cpp
test/ram/: ram_ext_test.cpp  ram_test.cpp  ro_ram_test.cpp
test/ram-zk/: ram_ext_test.cpp  ram_test.cpp  ro_ram_test.cpp  rom_test.cpp  set_test.cpp
test/vole/: base_svole.cpp  cope.cpp  lpn.cpp  vole_f2k_triple.cpp  vole_triple.cpp
